# CODEAPS

./: .gitignore  .pyre_configuration  CHANGELOG.md  DOCUMENTATION.md  README.md  SETUP.md  build_dist.ps1  cleanup_processes.bat  debug_ollama.bat  generate_templates.py  package-lock.json  package.json  requirements.txt  start_all.bat  start_services.bat  tailwind.config.js  test.js  test_fim.py  tsconfig.json  update_template_data.py  verify_execution_engine.py  vite.config.mjs  vite.config.ts
.github/workflows/: release.yml
analysis_engine/: analysis_service.py
backend-python/: .env  FORCE_INSTALL.bat  alembic.ini  check_deps.py  codeaps-backend.spec  diag.py  fix_deps.py  internal_install.py  launcher.py  requirements.txt  run_backend.bat  test_ollama_connection.py  verify_env.py
backend-python/ai_engine/: __init__.py  cache.py  model_manager.py  prompt_templates.py
backend-python/alembic/: env.py
backend-python/app/: init_db.py  main.py  seed_data.py
backend-python/tests/: test_auth.py  test_config.py  test_file_service.py  test_health.py  test_phase5_integration.py  test_seed.py
database/: db_manager.py  init_db.py
frontend/: index.html
src-tauri/: Cargo.toml  Prime.cpp  tauri.conf.json
src-tauri/src/: dap.rs  error.rs  indexer.rs  main.rs
src-tauri/src/commands/: analysis.rs  file_ops.rs  git.rs  lsp.rs  mod.rs  plugins.rs  search.rs  system_stats.rs  terminal.rs
src-tauri/src/lsp/: manager.rs  mod.rs  rpc.rs  websocket.rs
src-tauri/src/plugins/: engine.rs  mod.rs
src-tauri/src/python/: manager.rs  mod.rs
templates/: README.md
(+259 files in other folders)
